TwitterCloneUi/styles.css
/* ... */
    .user-popup.active {
        display: block;
    }
    .user-popup button{
        background: transparent;
    }
    .user-popup h4 {
        font-weight: 600;
        font-size: 16px;
        margin-top: 5px;
        margin-bottom: 5px;
        font-weight: 700;
    }
    .user-popup h4, .user-popup i{
        transition: all 400ms ease;
        cursor: pointer;
        color: var(--font-text-muted-color);
    }
    .user-popup h4:hover, .user-popup i:hover{
        transform: scale(1.03);
        color: var(--fontcolor-2);
    }
    .user-popup i{
        font-size: 24px;
        padding-top: .5rem;
        padding-bottom: .5rem;
        display: none;
    }
/*=============== HOMEPAGE ==============*/
    .homepage-main{
        overflow-y: auto;
    }
    .homepage-main::-webkit-scrollbar {
        display: none;
    }


    #username{
        margin-left: 10px;
        font-style: var(--big-font-size);
        color: var(--fontcolor-2);
        font-weight: var(--weight-600);
        font-size: var(--h4-font-size);
    }
    #userPost{
        font-family: var(--body-font);
        color: var(--fontcolor-2);
        background: none;
        font-size: 15px;
        border: none;
        padding: 5px 5px;
        margin-top: 0.25rem;
        width: 100%;
        box-sizing: border-box;
        resize: none;
        overflow-y: hidden;
    }

    .btn-container{
        display: flex;
        gap: 0.5rem;
        margin: 8px auto auto 8px;
        transition: all 200ms ease;
    }
    .btn-container.viewpost{
        gap: 5rem;
        padding-left: 70px;
        justify-content: center;
        align-items: center;
        transition: all 200ms ease;
    }
    
    .btn-container button:not(:last-child){
        justify-content: center;
        align-items: center;
        display: inline-block;
        background: none;
        border: none;
        border-radius: 50%;
        color: var(--timeline-btns-color);
        cursor: pointer;
        font-size: 18px;
        margin-right: 10px;
        padding: 5px 3px;
        transition: all 200ms ease;
      }
      .btn-container button:not(:last-child):hover{
        background: linear-gradient(to top right, var(--gradient-color1), var(--gradient-color2), var(--gradient-color3), var(--gradient-color4));
        -webkit-background-clip: text;
        background-clip: text;
        color: transparent;
    }
    .btn-container button:not(:last-child).active {
        background-color: transparent;
        background: linear-gradient(to top right, var(--gradient-color1), var(--gradient-color2), var(--gradient-color3), var(--gradient-color4));
        -webkit-background-clip: text;
        background-clip: text;
        color: transparent;
        cursor: pointer;
        animation: scale-in 1s ease forwards;
      }
      
      @keyframes scale-in {
        from {
          transform: scale(1.3);
        }
        to {
          transform: scale(1);
        }
      }
      

    .btn-container #gif {
        color: var(--fontcolor-2);
        font-size: 9px; 
        margin-bottom: 6px;
        padding: 3px 3px;
        border-radius: 2px;
        background: var(--timeline-btns-color);
        transition: all 200ms ease-in-out;
    }
    .btn-container #gif:hover {
        transition: all 200ms ease-in-out;
        background: linear-gradient(to top right, var(--gradient-color1), var(--gradient-color2), var(--gradient-color3), var(--gradient-color4));
    }
    .btn-container #gif:active{
        transition: all 200ms ease-in-out;
        background: linear-gradient(to top right, var(--gradient-color1), var(--gradient-color2), var(--gradient-color3), var(--gradient-color4));
    }

    .btn-container .outer-btn{
        display: flex;
        margin-left: unset;
        border-radius: 20px;
        height: 30px;
        width: 80px;
        top: unset;
    }

    .content-container {

        border-radius: 15px;
    }
    .content-post #user-img{
        height: 2rem;
        width: 2rem;
        transition: all 500ms ease;
    }
    .post-container {
        gap: 1.6rem;
        display: block;
        margin: 15px auto;
        padding: 20px;
        background: var(--home-content-container-color);
        border-radius: 30px;
    }
    
    .post-header {
        display: flex;
        align-items: center;
    }
    .post-header #userphoto-img {
        height: 2rem;
        width: 2rem;
        border-radius: 10px;
    }
    .post-header #username {
        text-align: center;
    }
    .post-text{
        padding: 7px;
        color: var(--bgcolor-2);
        font-size: 14px;
        line-height: 1.5;
    }
    #postbtn i{
        display: none;
        transition: all 200ms ease;
    }
    .bold-text{
        font-weight: 800;
        color: var(--bgcolor-2);
    }
    .post-media {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
        gap: 10px; 
        margin: 15px auto;
        transition: 500ms ease-in-out;
        align-items: center;
    }
    .post-media img {
        max-width: 100%; 
        height: 100%; 
        border-radius: 25px;
        transition: 500ms ease-in-out;
    }
    .post-media img:hover{
        transform: scale(1.03);
    }

    /*------------- PROFILE PAGE -------------*/
    .profile-main{
        margin-top: 1.4rem;
        display: none;
    }

    .header-pic img{
        height: 100%;
        width: 100%;
        border-radius: 30px;
        display: flex;
        z-index: 0;
        position: relative;
    }
    .profile-container{
        display: flex;
        background: var(--home-content-container-color);
        padding: 1rem;
        border-radius: 0px 0px 30px 30px;
        height: 30%;
        margin-top: -2rem;
        z-index: 1;
        position: relative;
        flex-direction: column;
    }
/* ... */

